# moneybin

./: .gitignore
.github/workflows/: ci.yml
backend/moneybin/: pyproject.toml
backend/moneybin/src/moneybin/: __init__.py
frontend/: package-lock.json
frontend/moneybin/: .gitignore  package-lock.json  package.json  vite.config.js
frontend/moneybin/.husky/: pre-commit
frontend/moneybin/tests/: index.test.js
